# ai_knowledge

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.workbuddy/memory/: 2026-04-09.md  MEMORY.md
docs/: API.md  DEPLOYMENT.md  MCP.md  PROJECT_PLAN.md
scripts/: run_mcp_server.py  seed_data.py
src/knowledge_forge/: __init__.py  main.py
src/knowledge_forge/api/: __init__.py  admin.py  chat.py  deps.py  documents.py  knowledge.py
src/knowledge_forge/config/: __init__.py  logging.py  settings.py
src/knowledge_forge/conversation/: __init__.py  memory.py  reference_resolver.py  session.py
src/knowledge_forge/dashboard/: __init__.py  app.py
src/knowledge_forge/document/: __init__.py  pipeline.py
src/knowledge_forge/document/chunker/: __init__.py  base.py  recursive_chunker.py  (+1 more)
src/knowledge_forge/embedding/: __init__.py  base.py  bge_embedding.py  openai_embedding.py
src/knowledge_forge/evaluation/: __init__.py  dataset.py  engine.py  metrics.py  report.py
src/knowledge_forge/mcp_server/: __init__.py  __main__.py  server.py
src/knowledge_forge/rag/: __init__.py  context_builder.py  conversation_memory.py  engine.py  generator.py  query_cache.py  query_rewriter.py  reranker.py
src/knowledge_forge/storage/: __init__.py  cache_store.py  file_store.py  metadata_store.py  vector_store.py
src/knowledge_forge/tasks/: celery_app.py  document_tasks.py
tests/: conftest.py
tests/unit/: test_chunkers.py  test_conversation_memory.py  test_evaluation.py  test_mcp_server.py  test_metadata_store.py  test_parsers.py  test_query_cache.py  test_query_rewriter.py  test_rag_engine.py  test_reranker.py  test_retriever.py
(+17 files in other folders)
